--- a/src/RegistrationManager/project.json
+++ b/src/RegistrationManager/project.json
@@ -17,6 +17,7 @@
         "Microsoft.Extensions.Logging.Debug": "1.0.0",
         "Microsoft.EntityFrameworkCore": "1.0.0",
         "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
+        "Microsoft.EntityFrameworkCore.SqlServer.Design": "1.0.0",
         "Microsoft.EntityFrameworkCore.Tools": {
             "version": "1.0.0-preview2-final",
             "type": "build"
