--- a/src/RegistrationManager/project.json
+++ b/src/RegistrationManager/project.json
@@ -22,8 +22,8 @@
             "version": "1.0.0-preview2-final",
             "type": "build"
         },
-        "AutoMapper": "4.2.1",
-        "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0"
+        "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
+        "AutoMapper": "5.1.1"
     },
 
     "tools": {
