--- a/src/RegistrationManager/project.json
+++ b/src/RegistrationManager/project.json
@@ -23,7 +23,7 @@
             "type": "build"
         },
         "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
-        "AutoMapper": "5.1.1"
+        "Swashbuckle": "6.0.0-beta902"
     },
 
     "tools": {
