Commented all classes and methods in order that Swagger can read them and included them into the API documentation. Moreover, the path had been added where the RegistrationManager.xml can be found for the development environment, as well as for the production environement.

--- a/src/RegistrationManager/project.json
+++ b/src/RegistrationManager/project.json
@@ -67,7 +67,8 @@
             "Views",
             "web.config",
             "config.json",
-            "appsettings.json"
+            "appsettings.json",
+            "RegistrationManager.xml"
         ]
     },
 
