--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,11 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+###############################################################################
+# Will be used to determine language statistics, 
+# but will not be used to syntax highlight files.
+#
+# https://github.com/github/linguist#overrides
+###############################################################################
+# REST-RegistrationService-/Report/html/* linguist-documentation
+# docs/formatter.rb linguist-documentation=false
