--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 *.user
 *.userosscache
 *.sln.docstates
+Doxygen.html - Shortcut.lnk
+
+# User-specific files
+Report/html/*
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
